- Moved 4 classes from core/model/ into common/data/
- Refactored imports

- Removed core dependencies from agv and common

Co-authored-by: EngrAbodeh <absha24@student.sdu.dk>